* Fix don't wrap button text

--- a/public_html/includes/templates/default.catalog/less/framework/buttons.less
+++ b/public_html/includes/templates/default.catalog/less/framework/buttons.less
@@ -20,10 +20,10 @@
   padding: var(--input-padding-y) var(--input-padding-x);
   text-decoration:  none;
   font-weight: normal;
-
   border-radius: var(--border-radius);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   text-align: center;
+  white-space: nowrap;
 
   &.btn-default { .btn("default"); }
   &.btn-primary { .btn("primary"); }
